# safetensors-spark

./: .gitignore  .scalafmt.conf  AGENTS.md  NOTICE  README.md  SPECIFICATION.md  build.sbt
.github/workflows/: ci.yml  scala-publish.yml
format/: SPECIFICATION.md  format.md  manifest-jsonschema.json
project/: plugins.sbt
python/safetensors_spark/: __init__.py  dataset.py  mlflow.py  pyproject.toml
src/main/scala-spark-4.0/io/github/semyonsinchenko/safetensors/util/: Errors.scala
src/main/scala-spark-4.1/io/github/semyonsinchenko/safetensors/util/: Errors.scala
src/main/scala/io/github/semyonsinchenko/safetensors/: SafetensorsExtensions.scala  SafetensorsTable.scala  SafetensorsTableProvider.scala
src/main/scala/io/github/semyonsinchenko/safetensors/core/: SafetensorsDtype.scala  SafetensorsHeader.scala  SafetensorsHeaderParser.scala  SafetensorsHeaderWriter.scala  TensorSchema.scala
src/main/scala/io/github/semyonsinchenko/safetensors/expressions/: ArrToStExpression.scala  StToArrayExpression.scala
src/main/scala/io/github/semyonsinchenko/safetensors/manifest/: DatasetManifest.scala
src/main/scala/io/github/semyonsinchenko/safetensors/mlflow/: SafetensorsDatasetSource.scala
src/main/scala/io/github/semyonsinchenko/safetensors/read/: SafetensorsInputPartition.scala  SafetensorsPartitionReader.scala  SafetensorsPartitionReaderFactory.scala  SafetensorsScan.scala  (+1 more)
src/test/scala/io/github/semyonsinchenko/safetensors/: ArrToStExpressionSpec.scala  SafetensorsDtypeSpec.scala  SafetensorsExtensionsSpec.scala  SafetensorsHeaderParserSpec.scala  SafetensorsHeaderWriterSpec.scala  StToArrayExpressionSpec.scala  TensorSchemaSpec.scala  WriteOptionsSpec.scala
tests/pyspark_interop/: conftest.py  pyproject.toml  test_benchmark_performance.py  test_dataset.py  test_mlflow.py  test_python_to_spark.py  test_spark_to_python.py
(+11 files in other folders)
