[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "safetensors-spark"
version = "0.1.0"
description = "Python utilities for the safetensors-spark Spark DataSource V2 connector"
readme = "../../README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Semyon Sinchenko" },
]
keywords = ["safetensors", "spark", "mlflow", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = []

[project.optional-dependencies]
mlflow = [
    "mlflow>=2.10",
]
pyarrow = [
    "pyarrow>=14.0",
]
dev = [
    "pytest>=8.0",
    "mlflow>=2.10",
    "pyarrow>=14.0",
]

[tool.hatch.build.targets.wheel]
packages = ["safetensors_spark"]

[tool.hatch.build.targets.sdist]
include = ["safetensors_spark/"]
